<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.signUpFragments.SignUpPetBarberFragment"
    android:background="@color/white">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/SignUpPetBarberFragment_FAB_goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/SmallSpace"
        android:layout_marginTop="@dimen/SmallSpace"
        android:clickable="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/click_here_to_go_back_to_the_start_screen"
        android:src="@drawable/baseline_chevron_left_24" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/SingUpPetBarberFragmentACIVProfile"
        android:layout_width="@dimen/photoSizeMedium"
        android:layout_height="@dimen/photoSizeMedium"
        android:src="@drawable/add_a_photo"
        android:clickable="true"
        android:contentDescription="@string/click_to_put_a_profile_picture"
        android:layout_margin="@dimen/SmallSpace"
        android:layout_centerHorizontal="true"
        />


<!--    LinearLayout-->
        <LinearLayout
            android:id="@+id/SingUpPetBarberFragment_LL"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/SmallSpace"
            android:layout_margin="@dimen/SmallSpace"
            android:layout_below="@id/SingUpPetBarberFragmentACIVProfile"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SingUpPetBarberFragment_TIL_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/name"
                android:layout_weight="1"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SingUpPetBarberFragment_TIET_Name"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SingUpPetBarberFragment_TIL_Phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                app:prefixText="+972"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/phone"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SingUpPetBarberFragment_TIEL_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SingUpPetBarberFragment_TIL_Address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/address"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SingUpPetBarberFragment_TIEL_Address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SingUpPetBarberFragment_TIL_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/price_per_meeting"
                app:suffixText="$"
                android:layout_weight="1"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SingUpPetBarberFragment_TIET_price"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    <RadioGroup
        android:id="@+id/SingUpPetBarberFragment_RG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/SmallSpace"
        android:layout_below="@id/SingUpPetBarberFragment_LL"
        >

        <RadioButton
            android:id="@+id/SingUpPetBarberFragment_RB_DogBarber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_am_a_dog_barber_only"
            android:textStyle="bold"
            />


        <RadioButton
            android:id="@+id/SingUpPetBarberFragment_RB_CatBarber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_am_a_cat_barber_only"
            android:textStyle="bold"
            />
        <RadioButton
            android:id="@+id/SingUpPetBarberFragment_RB_Both"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/both"
            android:textStyle="bold"
            />
    </RadioGroup>



</RelativeLayout>
