<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.barberFragments.ProfileBarberFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profileBarberFragment_MTV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/user_profile"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:fontFamily="@font/inter_medium">

    </com.google.android.material.textview.MaterialTextView>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profileBarberFragment_ACIV_profile"
        android:layout_width="@dimen/photoSizeMedium"
        android:layout_height="@dimen/photoSizeMedium"
        android:src="@drawable/add_a_photo"
        android:clickable="true"
        android:contentDescription="@string/click_to_put_a_profile_picture"
        android:layout_marginTop="@dimen/SmallSpace"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profileBarberFragment_MTV_title"
        />


    <!--    LinearLayout-->
    <LinearLayout
        android:id="@+id/profileBarberFragment_LL"
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:layout_marginTop="@dimen/SmallSpace"
        android:layout_margin="@dimen/SmallSpace"
        android:layout_below="@id/profileBarberFragment_ACIV_profile"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileBarberFragment_TIL_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/name"
            android:layout_weight="1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileBarberFragment_TIET_Name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileBarberFragment_TIL_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/email"
            android:layout_weight="1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileBarberFragment_TIET_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileBarberFragment_TIL_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/prompt_password"
            android:layout_weight="1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileBarberFragment_TIET_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileBarberFragment_TIL_Phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/phone"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileBarberFragment_TIEL_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileBarberFragment_TIL_Address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/address"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileBarberFragment_TIEL_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileBarberFragment_TIL_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/price_per_meeting"
            android:layout_weight="1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileBarberFragment_TIET_price"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileBarberFragment_TIL_info"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/more_details_optional"
            android:layout_weight="2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileBarberFragment_TIET_info"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
    <RadioGroup
        android:id="@+id/profileBarberFragment_RG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/SmallSpace"
        android:layout_below="@id/profileBarberFragment_LL"
        >

        <RadioButton
            android:id="@+id/profileBarberFragment_RB_DogBarber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_am_a_dog_barber_only"
            android:textStyle="bold"
            />


        <RadioButton
            android:id="@+id/profileBarberFragment_RB_CatBarber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_am_a_cat_barber_only"
            android:textStyle="bold"
            />
        <RadioButton
            android:id="@+id/profileBarberFragment_RB_Both"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/both"
            android:textStyle="bold"
            />
    </RadioGroup>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/LoginActivity_FAB_save"
        android:layout_width="@dimen/Button_Login_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/profileBarberFragment_RG"
        android:layout_marginTop="@dimen/SmallSpace"
        android:clickable="true"
        android:shadowRadius="@integer/google_play_services_version"
        android:text="@string/fui_button_text_save"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"

        />


</RelativeLayout>

</ScrollView>